--- a/assets/sass/layout/_intro.scss
+++ b/assets/sass/layout/_intro.scss
@@ -43,10 +43,11 @@
 		li {
 			padding: 0;
 			font-size: 0.9em;
-			height: 62px;
+			height: 74px;
 		}
 		pre {
 			margin-bottom: 0;
+			height: 74px;
 		}
 		h1 {
 			margin: 0;
